--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,28 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+
+  <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-app.js"></script>
+  <!--
+  <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-messaging.js"></script> -->
+
+  <script src="/__/firebase/init.js"></script>
+  <script>
+  // Initialize Firebase
+var config = {
+  apiKey: 'AIzaSyAJ2CjyMXElc3k6xNCH8l18LX-sOPabWAY',
+  authDomain: 'bnoden-wv.firebaseapp.com',
+  databaseURL: 'https://bnoden-wv.firebaseio.com',
+  projectId: 'bnoden-wv',
+  storageBucket: '',
+  messagingSenderId: '68500006987'
+};
+firebase.initializeApp(config);
+</script>
+
 </html>
