--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('service-worker.js').then(function(registration) {
@@ -42,7 +42,7 @@
       } else {
         console.log('service worker is not supported');
       }
-    </script>
+    </script> -->
     <div class="App">
       </div>
     <!--
